bug fixes helped by scipio